@@ -36,7 +36,7 @@ INSTALL_DIR = ../lib
 JAVADOC_DIR = ../doc/api
 
 JAVADOC_OPT = \
-	-version -author -windowtitle "Tapestry API" \
+	-version -author -splitindex -windowtitle "Tapestry API" \
 	-link http://java.sun.com/j2se/1.3/docs/api \
 	-link http://java.sun.com/j2ee/j2sdkee/techdocs/api \
 	-link http://xml.apache.org/apiDocs
